--- a/my-electron-app/package.json
+++ b/my-electron-app/package.json
@@ -19,5 +19,9 @@
   "homepage": "https://github.com/Ryano2022/ATU-Year-4-Final-Year-Project#readme",
   "devDependencies": {
     "electron": "^33.1.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7",
+    "firebase": "^11.3.1"
   }
 }
