--- a/my-electron-app/package.json
+++ b/my-electron-app/package.json
@@ -21,6 +21,7 @@
     "electron": "^33.1.0"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "dotenv": "^16.4.7",
     "firebase": "^11.3.1"
   }
