--- a/my-electron-app/.env.example
+++ b/my-electron-app/.env.example
@@ -3,3 +3,5 @@ FIREBASE_AUTH_DOMAIN=your_project_domain.firebaseapp.com
 FIREBASE_PROJECT_ID=your_project_id
 FIREBASE_STORAGE_BUCKET=your_storage_bucket.firebasestorage.app
 FIREBASE_APP_ID=your_app_id
+
+GEMINI_API_KEY=your_gemini_api_key_here
