Ready for first release.

--- a/my-electron-app/package.json
+++ b/my-electron-app/package.json
@@ -5,7 +5,9 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prebuild": "node prepare-config.js",
+    "package": "npm run prebuild && electron-builder"
   },
   "repository": {
     "type": "git",
@@ -18,11 +20,56 @@
   },
   "homepage": "https://github.com/Ryano2022/ARK-Config-File-Manager#readme",
   "devDependencies": {
-    "electron": "^33.1.0"
+    "electron": "^33.1.0",
+    "electron-builder": "^26.0.12"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
     "dotenv": "^16.4.7",
     "firebase": "^11.3.1"
+  },
+  "build": {
+    "appId": "com.Ryano.ARKConfigFileManager",
+    "productName": "ARK Config File Manager",
+    "files": [
+      "**/*",
+      "!**/.env*",
+      "!**/node_modules/**/{CHANGELOG.md,README.md,README,readme.md,readme}",
+      "!**/node_modules/**/{test,__tests__,tests,powered-test,example,examples}",
+      "!**/node_modules/.bin",
+      "!**/*.{iml,o,hprof,orig,pyc,pyo,rbc,swp,csproj,sln,xproj}",
+      "!.editorconfig",
+      "!**/._*",
+      "!**/{.DS_Store,.git,.hg,.svn,CVS,RCS,SCCS,.gitignore,.gitattributes}",
+      "!**/{__pycache__,thumbs.db,.flowconfig,.idea,.vs,.nyc_output}",
+      "!**/{appveyor.yml,.travis.yml,circle.yml}",
+      "!**/{npm-debug.log,yarn.lock,.yarn-integrity,.yarn-metadata.json}"
+    ],
+    "directories": {
+      "buildResources": "resources"
+    },
+    "asarUnpack": [
+      "**/*.node"
+    ],
+    "icon": "src/assets/icons/favicon.png",
+    "win": {
+      "icon": "src/assets/icons/favicon.ico",
+      "target": [
+        "nsis"
+      ]
+    },
+    "mac": {
+      "icon": "src/assets/icons/favicon.icns",
+      "target": [
+        "dmg"
+      ]
+    },
+    "linux": {
+      "icon": "src/assets/icons/favicon.png",
+      "target": [
+        "AppImage",
+        "deb"
+      ]
+    }
   }
 }
